fixed hero section on mobile overlapping services and the nav links bring squished at 1024px

--- a/src/css/critical.less
+++ b/src/css/critical.less
@@ -12,6 +12,7 @@
         text-align: center;
         /* changes on tablet */
         padding: 0 16/16rem;
+        padding-bottom: 100/16rem;
         position: relative;
         z-index: 1;
         /* prevents overflow from the lines extending past the screen width */
@@ -139,7 +140,7 @@
             width: 180/16rem;
             text-decoration: none;
 	    	font-weight: 700;
-            margin: 0 0 16/16rem 0;
+            margin: 0 8/16rem 16/16rem 8/16rem;
             color: var(--headerColor);
             padding: 0;
             background-color: var(--primary);
@@ -179,7 +180,7 @@
             height: clamp(2.875em, 5.5vw, 3.5em);
             text-decoration: none;
 	    	font-weight: 700;
-            margin: 0;
+            margin: 0 8/16rem;
             color: #fff;
             padding: 0;
             background-color: transparent;
