--- a/src/css/root.less
+++ b/src/css/root.less
@@ -525,7 +525,8 @@
                     a {
                         text-decoration: none;
                         font-weight: bold;
-                        font-size: 19/16em;
+                        /* 14px - 18px */
+                        font-size: clamp(.875rem, 1.5vw, 1.125rem);
                         text-transform: uppercase;
                         position: relative;
                         z-index: 1;
